--- a/glide.yaml
+++ b/glide.yaml
@@ -5,3 +5,4 @@ import:
 - package: github.com/uber-go/zap
 - package: github.com/uber-go/atomic
   version: ~1.0.0
+- package: github.com/spf13/viper
